--- a/frontend/src/components/layout/Header/Header.css
+++ b/frontend/src/components/layout/Header/Header.css
@@ -1,3 +1,32 @@
 .accountCircle{
     color: white;
 }
+
+.speedDial {
+    position: fixed;
+    right: 3vmax;
+    top: 10vmax;
+}
+.speedDialIcon {
+    height: 58px;
+    width: 58px;
+    border-radius: 100%;
+    
+}
+
+@media screen and (max-width: 600px) {
+    .speedDial {
+        top: 15vmax;
+    }
+    .speedDial > button {
+        width: 36px;
+        height: 36px;
+        border-radius: 100%;
+    }
+    .speedDialIcon {
+        height: 38px;
+        width: 38px;
+       
+    }
+    
+}
