Working on Cartpage

--- a/frontend/src/components/Product/Cart/Cart.css
+++ b/frontend/src/components/Product/Cart/Cart.css
@@ -160,6 +160,7 @@
     }
 
     .cartInput > input {
+        width: 2vmax;
         padding: 1.5vmax;
         font: 500 2vmax var(--Roboto-font-family);
     }
