--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,7 @@
   --prime-white-color: #ffffff;
   --homepage-h1-color: rgb(0, 0, 0, 0.7);
   --backgroudColor: rgb(245, 245, 240);
+  --confirmPageSpanColor: #575757;
 
   --primary-font-family: "Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif";
   --Roboto-font-family: "Roboto";
