--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -16,11 +16,11 @@ input[type=number] {
 }
 
 .redColor {
-    color: red;
+    color: red !important;
 }
 
 .greenColor {
-    color: green;
+    color: green !important;
 }
 
 .LocalMallIcon {
