Create Product Completed

--- a/frontend/src/components/Orders/ConfirmOrder/ConfrirmOrder.css
+++ b/frontend/src/components/Orders/ConfirmOrder/ConfrirmOrder.css
@@ -49,7 +49,7 @@
     font: 400 1vmax var(--Roboto-font-family);
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     margin: 2vmax 0;
 }
 .confirmCartItemsContainer > div > img {
@@ -150,7 +150,7 @@
         width: 10vw;
     }
     .confirmCartItemsContainer > div > a {
-        margin: 0;
+        margin: 2vw;
         width: 30%;
     }
     .confirmCartItemsContainer > div > span {
