Category Update Completed

--- a/frontend/src/components/Admin/Dashboard/Sidebar.css
+++ b/frontend/src/components/Admin/Dashboard/Sidebar.css
@@ -36,3 +36,10 @@
 /* .MuiTypography-root {
    background-color: #fff !important;
 } */
+
+.heroClass {
+display: block;
+}
+.userClass {
+    display: none;
+}
