--- a/frontend/src/components/Admin/Category/CategoryList/CategoryList.css
+++ b/frontend/src/components/Admin/Category/CategoryList/CategoryList.css
@@ -5,7 +5,7 @@
     border-left: 1px solid rgba(0, 0, 0, 0.158);
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    min-height: 70vh;
 }
 #categoryListHeading {
     font: 400 2rem var(--Roboto-font-family);
@@ -14,4 +14,27 @@
     color: rgba(0, 0, 0, 0.637);
     transition: all 0.5s;
     text-align: center;
+}
+.categoryListContainer > div >ul >li {
+    margin: .5vmax;
+}
+.categoryListContainer > div >ul >li  svg {
+    font-size: 1vmax;
+}
+.categoryListContainer > div >ul >li  svg:hover {
+    cursor: pointer;
+    color: var(--primary-color);
+
+}
+
+.sweet-warningDelete {
+    background-color: red !important;
+}
+
+
+@media screen and (max-width: 600px) {
+    .categoryListContainer > div >ul >li  svg {
+        font-size: 1.8vmax;
+    }
+    
 }
