--- a/frontend/src/components/Product/Products/Products.css
+++ b/frontend/src/components/Product/Products/Products.css
@@ -7,6 +7,16 @@
   font: 500 1.5 var(--Roboto-font-family);
   text-align: center;
 }
+
+.productsHeadingForNoRecord {
+  margin: 1vmax auto;
+  width: 30vw;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.171);
+  padding: 2vmax;
+  color: rgba(0, 0, 0, 0.678);
+  font: 500 1.5 var(--Roboto-font-family);
+  text-align: center;
+}
 .products {
   /* display: flex;
     flex-wrap: wrap;
@@ -138,4 +148,49 @@
   .filterBox > fieldset > legend {
     font-size: 2vmax;
   }
+  .categoryContainer > ul >li >ul >li >span{
+    font: 600 2.3vmax var(--Roboto-font-family) !important;
+  }
+  .categoryContainer > ul >li >ul >li  >ul li {
+    font: 400 2vmax var(--Roboto-font-family) !important;
+    margin: 0.5vmax !important;
+  }
 }
+
+
+.categoryContainer ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.categoryContainer > ul >li >span{
+  margin: 0;
+  font-family: "Roboto","Helvetica","Arial",sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.5;
+  letter-spacing: 0.00938em;
+  pointer-events: none;
+}
+.categoryContainer > ul >li a{
+  color: rgba(0, 0, 0, 0.61);
+}
+.categoryContainer > ul >li >ul >li >span{
+  pointer-events: none;
+  /* color: blue !important; */
+  color: rgba(0, 0, 0, 0.652);
+  font: 600 1.2vmax var(--Roboto-font-family);
+  margin: 0.4vmax;
+}
+.categoryContainer > ul >li >ul >li  >ul li {
+  color: rgba(0, 0, 0, 0.61);
+  font: 400 1vmax var(--Roboto-font-family);
+  margin: 0.4vmax;
+  cursor: pointer;
+  transition: all 0.5s;
+  position: relative;
+}
+.categoryContainer > ul >li >ul >li  >ul li:hover{
+  color: #ff6347;
+}
+
